<resources>
    <string name="app_name">MekPartner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_service_happy_customers">Better Service\nHappy Customers</string>
    <string name="short_desc">Lorem Ipsum is simply dummy text of the printing
        and typesetting industry.</string>
    <string name="login_to_enjoy_">Login to enjoy hastle-free and full access of our service</string>
    <string name="enter_phone_">Enter phone number to continue</string>
    <string name="i_have_">I have a referral code</string>
    <string name="by_creating_">By creating an account,</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="rubbing">Rubbing &amp; polishing </string>
    <string name="exterior"><![CDATA[Exterior Rubbing & Polishing]]></string>
    <string name="drop_date">Drop date &amp; time </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_partner_type">Choose partner type:-</string>
    <string name="jack_handle"><![CDATA[Jack & handle]]></string>
    <string name="rubbing_polishing"><![CDATA[Rubbing & polishing]]></string>
    <string name="_15_min_approx">15 min (approx)</string>
    <string name="navigate">Navigate</string>
    <string name="pickup_date_time"><![CDATA[Pickup date & time]]></string>
    <string name="to_confirm_service_nadd_vehicle_pic_confirm_otp"><![CDATA[To confirm service\nadd vehicle pic & confirm OTP]]></string>
    <string name="popup"><![CDATA[&#8226; 5 coins will be charged for one call<br />&#8226; 3 coins wii be charged for one sms.]]></string>
    <string name="_3_coins_will_be_charged_to_accept_the_particular_booking">3 coins will be charged to accept the particular booking</string>
    <string name="petrol_diesel_meter">Petrol/ Diesel Meter</string>
    <string name="message">I aurthorize to execute the jobs described herin using the necessary material cost. I understand that the vehicle is stored, repaired and tested at my own risk</string>
    <string name="serviced_drop_done"><![CDATA[Serviced & Drop Done]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="booking_date_time"><![CDATA[Booking date & time]]></string>
    <string name="servicedateandTime"><![CDATA[Service date & time]]></string>
    <string name="this_amount_is_only_for_the_extra_consumable_part">This amount is only for the extra consumable part</string>
    <string-array name="select_battery">
        <item>Oxide</item>
        <item>Exide</item>
    </string-array>

</resources>
