<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginRelated.SignUpandLoginFragments.FragmentSignUp">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_marginTop="16dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingLeft="-8dp"
        android:src="@drawable/arrow_back_red"/>

    <ScrollView
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_marginTop="104dp"
            android:paddingBottom="108dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="Signup"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gotham_book_regular"
                android:text="Create a new account with Mekpark"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/gotham_book_regular"
                android:text="10 digit mobile number"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:enabled="false"
                android:fontFamily="@font/gotham_book_regular"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_book_regular"
                    android:hint="e-mail id"
                    android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect|textFilter"
                    android:paddingTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_book_regular"
                    android:hint="Name"
                    android:inputType="text|textAutoComplete|textAutoCorrect|textFilter"
                    android:paddingTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_book_regular"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Partner Type"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_book_regular"
                android:textSize="10dp" />

            <Spinner
                android:id="@+id/partner_type"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="-8dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_referral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_book_regular"
                    android:text="@string/i_have_"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:visibility="gone"
                android:id="@+id/referral_code"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gotham_book_regular"
                android:text="@string/by_creating_"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gotham_book_regular"
                    android:text="I accept the"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/gotham_book_regular"
                    android:text="Terms &amp; Conditions"
                    android:textColor="@color/yellow"
                    android:textSize="10sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/button_style_1"
                android:text="@string/signup"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>